welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:20: error: illegal start of simple expression
	}
        ^