welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
var x = 0
var y = 0
def dogHouse () {
	baisseBrosse;
	while (x <= 2) {
		if (x==2) {
		gauche();
		x=0
		}
    	avance();
    	x = x + 1;
    	y = y+1
    	if (y==9) {
    		leveBrosse;
    		avance(4);
    		baisseBrosse
    	}
    	if (y==19)
	}
	
}





